--- a/redirect.html
+++ b/redirect.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=YOUR_NOTION_LINK">
+    <meta http-equiv="refresh" content="0; url=https://www.notion.so/lilligraf/8d2197675c0a4bd98bb82d4016905c0c?v=be6dde500bb247ac85afae382be2f9aa&pvs=4">
     <title>Redirecting...</title>
 </head>
 <body>
